liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
#define LOSCFG_BASE_CORE_TSK_DEFAULT_STACK_SIZE 1024
typedef unsigned int UINT32;
typedef struct tagTskInitParam {
  TSK_ENTRY_FUNC pfnTaskEntry;
  UINT16 usTaskPrio;
  UINT32 uwArg;
  UINTPTR stackAddr;
  UINT32 uwStackSize;
  CHAR *pcName;
  UINT32 uwResved;
} tagTskInitParam;
typedef struct tagTskInitParam TSK_INIT_PARAM_S;
extern UINT32 LOS_TaskCreateOnly(UINT32 *taskID,
                                 TSK_INIT_PARAM_S *taskInitParam);
extern UINT32 LOS_TaskCreate(UINT32 *taskID,
                             TSK_INIT_PARAM_S *taskInitParam);
extern UINT32 LOS_TaskResume(UINT32 taskID);
extern UINT32 LOS_TaskSuspend(UINT32 taskID);
extern UINT32 LOS_TaskDelete(UINT32 taskID);
extern UINT32 LOS_TaskDelay(UINT32 tick);
extern void LOS_TaskLock(void);
extern void LOS_TaskUnlock(void);
extern UINT32 LOS_TaskCreateOnly(UINT32 *taskID,
                                 TSK_INIT_PARAM_S *taskInitParam);
extern UINT32 LOS_TaskCreate(UINT32 *taskID,
                             TSK_INIT_PARAM_S *taskInitParam);
extern UINT32 LOS_TaskResume(UINT32 taskID);
extern UINT32 LOS_TaskSuspend(UINT32 taskID);
extern UINT32 LOS_TaskDelete(UINT32 taskID);
extern UINT32 LOS_TaskDelay(UINT32 tick);
extern void LOS_TaskLock(void);
extern void LOS_TaskUnlock(void);