liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Create a task."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to create a task. If the priority of the task created after system initialized is higher than"]
    #[doc = " the current task and task scheduling is not locked, it is scheduled for running."]
    #[doc = " If not, the created task is added to the queue of ready tasks."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>During task creation, the task control block and task stack of the task that is previously automatically"]
    #[doc = " deleted are deallocated.</li>"]
    #[doc = " <li>The task name is a pointer and is not allocated memory.</li>"]
    #[doc = " <li>If the size of the task stack of the task to be created is 0, configure #LOSCFG_BASE_CORE_TSK_DEFAULT_STACK_SIZE"]
    #[doc = " to specify the default task stack size.</li>"]
    #[doc = " <li>The task stack size must be aligned on the boundary of 8 bytes. The size is determined by whether it is big"]
    #[doc = " enough to avoid task stack overflow.</li>"]
    #[doc = " <li>Less parameter value indicates higher task priority.</li>"]
    #[doc = " <li>The task name cannot be null.</li>"]
    #[doc = " <li>The pointer to the task executing function cannot be null.</li>"]
    #[doc = " <li>The two parameters of this interface is pointer, it should be a correct value, otherwise, the system may be"]
    #[doc = " abnormal.</li>"]
    #[doc = " <li>If user mode is enabled, user should input user stack pointer and size, the size must fit the stack pointer,"]
    #[doc = " uwStackSize remain as the kernel stack size.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskID        [OUT] Type  #UINT32 * Task ID."]
    #[doc = " @param  taskInitParam [IN]  Type  #TSK_INIT_PARAM_S * Parameter for task creation."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID        Invalid Task ID, param puwTaskID is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_PTR_NULL          Param pstInitParam is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_NAME_EMPTY        The task name is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_ENTRY_NULL        The task entrance is NULL."]
    #[doc = " @retval #LOS_ERRNO_TSK_PRIOR_ERROR       Incorrect task priority."]
    #[doc = " @retval #LOS_ERRNO_TSK_STKSZ_TOO_LARGE   The task stack size is too large."]
    #[doc = " @retval #LOS_ERRNO_TSK_STKSZ_TOO_SMALL   The task stack size is too small."]
    #[doc = " @retval #LOS_ERRNO_TSK_TCB_UNAVAILABLE   No free task control block is available."]
    #[doc = " @retval #LOS_ERRNO_TSK_NO_MEMORY         Insufficient memory for task creation."]
    #[doc = " @retval #LOS_OK                          The task is successfully created."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " <ul><li>los_config.h: the header file that contains system configuration items.</li></ul>"]
    #[doc = " @see LOS_TaskDelete"]
    pub fn LOS_TaskCreate(taskID: *mut UINT32, taskInitParam: *mut TSK_INIT_PARAM_S) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Resume a task."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to resume a suspended task."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>If the task is delayed or blocked, resume the task without adding it to the queue of ready tasks.</li>"]
    #[doc = " <li>If the priority of the task resumed after system initialized is higher than the current task and task scheduling"]
    #[doc = " is not locked, it is scheduled for running.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskID [IN] Type #UINT32 Task ID. The task id value is obtained from task creation."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID        Invalid Task ID"]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_CREATED       The task is not created."]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_SUSPENDED     The task is not suspended."]
    #[doc = " @retval #LOS_OK                          The task is successfully resumed."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskSuspend"]
    pub fn LOS_TaskResume(taskID: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Suspend a task."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to suspend a specified task, and the task will be removed from the queue of ready tasks."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The task that is running and locked cannot be suspended.</li>"]
    #[doc = " <li>The idle task and swtmr task cannot be suspended.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskID [IN] Type #UINT32 Task ID. The task id value is obtained from task creation."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_OPERATE_IDLE                  Check the task ID and do not operate on the idle task."]
    #[doc = " @retval #LOS_ERRNO_TSK_SUSPEND_SWTMR_NOT_ALLOWED     Check the task ID and do not operate on the swtmr task."]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID                    Invalid Task ID"]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_CREATED                   The task is not created."]
    #[doc = " @retval #LOS_ERRNO_TSK_ALREADY_SUSPENDED             The task is already suspended."]
    #[doc = " @retval #LOS_ERRNO_TSK_SUSPEND_LOCKED                The task being suspended is current task and task scheduling"]
    #[doc = "                                                      is locked."]
    #[doc = " @retval #LOS_OK                                      The task is successfully suspended."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskResume"]
    pub fn LOS_TaskSuspend(taskID: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Delete a task."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to delete a specified task and release the resources for its task stack and task control block."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The idle task and swtmr task cannot be deleted.</li>"]
    #[doc = " <li>If delete current task maybe cause unexpected error.</li>"]
    #[doc = " <li>If a task get a mutex is deleted or automatically deleted before release this mutex, other tasks pended"]
    #[doc = " this mutex maybe never be scheduled.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskID [IN] Type #UINT32 Task ID. The task id value is obtained from task creation."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_OPERATE_IDLE                  Check the task ID and do not operate on the idle task."]
    #[doc = " @retval #LOS_ERRNO_TSK_SUSPEND_SWTMR_NOT_ALLOWED     Check the task ID and do not operate on the swtmr task."]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID                    Invalid Task ID"]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_CREATED                   The task is not created."]
    #[doc = " @retval #LOS_OK                                      The task is successfully deleted."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskCreate | LOS_TaskCreateOnly"]
    pub fn LOS_TaskDelete(taskID: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Delay a task."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to delay the execution of the current task. The task is able to be scheduled after it is delayed"]
    #[doc = " for a specified number of Ticks."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The task fails to be delayed if it is being delayed during interrupt processing or it is locked.</li>"]
    #[doc = " <li>If 0 is passed in and the task scheduling is not locked, execute the next task in the queue of tasks with"]
    #[doc = " the same priority of the current task."]
    #[doc = " If no ready task with the priority of the current task is available, the task scheduling will not occur, and the"]
    #[doc = " current task continues to be executed.</li>"]
    #[doc = " <li>Using the interface before system initialized is not allowed.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  tick [IN] Type #UINT32 Number of Ticks for which the task is delayed."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_DELAY_IN_INT              The task delay occurs during an interrupt."]
    #[doc = " @retval #LOS_ERRNO_TSK_DELAY_IN_LOCK             The task delay occurs when the task scheduling is locked."]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID                Invalid Task ID"]
    #[doc = " @retval #LOS_ERRNO_TSK_YIELD_NOT_ENOUGH_TASK     No tasks with the same priority is available for scheduling."]
    #[doc = " @retval #LOS_OK                                  The task is successfully delayed."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_TaskDelay(tick: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Lock the task scheduling."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to lock the task scheduling. Task switching will not occur if the task scheduling is locked."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>If the task scheduling is locked, but interrupts are not disabled, tasks are still able to be interrupted.</li>"]
    #[doc = " <li>One is added to the number of task scheduling locks if this API is called. The number of locks is decreased by"]
    #[doc = " one if the task scheduling is unlocked. Therefore, this API should be used together with LOS_TaskUnlock.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval None."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskUnlock"]
    pub fn LOS_TaskLock();
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Unlock the task scheduling."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to unlock the task scheduling. Calling this API will decrease the number of task locks by one."]
    #[doc = " If a task is locked more than once, the task scheduling will be unlocked only when the number of locks becomes zero."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The number of locks is decreased by one if this API is called. One is added to the number of task scheduling"]
    #[doc = " locks if the task scheduling is locked. Therefore, this API should be used together with LOS_TaskLock.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval None."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskLock"]
    pub fn LOS_TaskUnlock();
}
